# Mirage

./: Cargo.toml
plugins/: test.py
src/: main.rs  plugin_host.rs
src/plugin_host/: mod.rs  plugin_host.rs
src/status/: mirage_status.rs  mod.rs
src/worker_port/: auth.rs  mod.rs  worker_auth.rs  worker_info.rs  worker_port.rs
templates/: index.html.tera
