[package]
name = "Mirage"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["secrets", "json"] }
pyo3 = { version = "0.21", features = ["auto-initialize"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
env_logger = "0.11.8"
chrono = "0.4.40"
log = "0.4.27"